; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_crypt_freesec.c_des_setkey.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_crypt_freesec.c_des_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.php_crypt_extended_data = type { i32, i32, i32*, i32*, i32*, i32* }

@key_perm_maskl = common dso_local global i32** null, align 8
@key_perm_maskr = common dso_local global i32** null, align 8
@key_shifts = common dso_local global i64* null, align 8
@comp_maskl = common dso_local global i32** null, align 8
@comp_maskr = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.php_crypt_extended_data*)* @des_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @des_setkey(i8* %0, %struct.php_crypt_extended_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.php_crypt_extended_data*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.php_crypt_extended_data* %1, %struct.php_crypt_extended_data** %5, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 3
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i64
  %18 = trunc i64 %17 to i32
  %19 = load i8*, i8** %4, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 2
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i64
  %23 = trunc i64 %22 to i32
  %24 = shl i32 %23, 8
  %25 = or i32 %18, %24
  %26 = load i8*, i8** %4, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 1
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i64
  %30 = trunc i64 %29 to i32
  %31 = shl i32 %30, 16
  %32 = or i32 %25, %31
  %33 = load i8*, i8** %4, align 8
  %34 = getelementptr inbounds i8, i8* %33, i64 0
  %35 = load i8, i8* %34, align 1
  %36 = sext i8 %35 to i64
  %37 = trunc i64 %36 to i32
  %38 = shl i32 %37, 24
  %39 = or i32 %32, %38
  store i32 %39, i32* %8, align 4
  %40 = load i8*, i8** %4, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 7
  %42 = load i8, i8* %41, align 1
  %43 = sext i8 %42 to i64
  %44 = trunc i64 %43 to i32
  %45 = load i8*, i8** %4, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 6
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i64
  %49 = trunc i64 %48 to i32
  %50 = shl i32 %49, 8
  %51 = or i32 %44, %50
  %52 = load i8*, i8** %4, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 5
  %54 = load i8, i8* %53, align 1
  %55 = sext i8 %54 to i64
  %56 = trunc i64 %55 to i32
  %57 = shl i32 %56, 16
  %58 = or i32 %51, %57
  %59 = load i8*, i8** %4, align 8
  %60 = getelementptr inbounds i8, i8* %59, i64 4
  %61 = load i8, i8* %60, align 1
  %62 = sext i8 %61 to i64
  %63 = trunc i64 %62 to i32
  %64 = shl i32 %63, 24
  %65 = or i32 %58, %64
  store i32 %65, i32* %9, align 4
  %66 = load i32, i32* %8, align 4
  %67 = load i32, i32* %9, align 4
  %68 = or i32 %66, %67
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %70, label %83

70:                                               ; preds = %2
  %71 = load i32, i32* %8, align 4
  %72 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %73 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %72, i32 0, i32 0
  %74 = load i32, i32* %73, align 8
  %75 = icmp eq i32 %71, %74
  br i1 %75, label %76, label %83

76:                                               ; preds = %70
  %77 = load i32, i32* %9, align 4
  %78 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %79 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %78, i32 0, i32 1
  %80 = load i32, i32* %79, align 4
  %81 = icmp eq i32 %77, %80
  br i1 %81, label %82, label %83

82:                                               ; preds = %76
  store i32 0, i32* %3, align 4
  br label %457

83:                                               ; preds = %76, %70, %2
  %84 = load i32, i32* %8, align 4
  %85 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %86 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %85, i32 0, i32 0
  store i32 %84, i32* %86, align 8
  %87 = load i32, i32* %9, align 4
  %88 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %89 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %88, i32 0, i32 1
  store i32 %87, i32* %89, align 4
  %90 = load i32**, i32*** @key_perm_maskl, align 8
  %91 = getelementptr inbounds i32*, i32** %90, i64 0
  %92 = load i32*, i32** %91, align 8
  %93 = load i32, i32* %8, align 4
  %94 = ashr i32 %93, 25
  %95 = sext i32 %94 to i64
  %96 = getelementptr inbounds i32, i32* %92, i64 %95
  %97 = load i32, i32* %96, align 4
  %98 = load i32**, i32*** @key_perm_maskl, align 8
  %99 = getelementptr inbounds i32*, i32** %98, i64 1
  %100 = load i32*, i32** %99, align 8
  %101 = load i32, i32* %8, align 4
  %102 = ashr i32 %101, 17
  %103 = and i32 %102, 127
  %104 = sext i32 %103 to i64
  %105 = getelementptr inbounds i32, i32* %100, i64 %104
  %106 = load i32, i32* %105, align 4
  %107 = or i32 %97, %106
  %108 = load i32**, i32*** @key_perm_maskl, align 8
  %109 = getelementptr inbounds i32*, i32** %108, i64 2
  %110 = load i32*, i32** %109, align 8
  %111 = load i32, i32* %8, align 4
  %112 = ashr i32 %111, 9
  %113 = and i32 %112, 127
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds i32, i32* %110, i64 %114
  %116 = load i32, i32* %115, align 4
  %117 = or i32 %107, %116
  %118 = load i32**, i32*** @key_perm_maskl, align 8
  %119 = getelementptr inbounds i32*, i32** %118, i64 3
  %120 = load i32*, i32** %119, align 8
  %121 = load i32, i32* %8, align 4
  %122 = ashr i32 %121, 1
  %123 = and i32 %122, 127
  %124 = sext i32 %123 to i64
  %125 = getelementptr inbounds i32, i32* %120, i64 %124
  %126 = load i32, i32* %125, align 4
  %127 = or i32 %117, %126
  %128 = load i32**, i32*** @key_perm_maskl, align 8
  %129 = getelementptr inbounds i32*, i32** %128, i64 4
  %130 = load i32*, i32** %129, align 8
  %131 = load i32, i32* %9, align 4
  %132 = ashr i32 %131, 25
  %133 = sext i32 %132 to i64
  %134 = getelementptr inbounds i32, i32* %130, i64 %133
  %135 = load i32, i32* %134, align 4
  %136 = or i32 %127, %135
  %137 = load i32**, i32*** @key_perm_maskl, align 8
  %138 = getelementptr inbounds i32*, i32** %137, i64 5
  %139 = load i32*, i32** %138, align 8
  %140 = load i32, i32* %9, align 4
  %141 = ashr i32 %140, 17
  %142 = and i32 %141, 127
  %143 = sext i32 %142 to i64
  %144 = getelementptr inbounds i32, i32* %139, i64 %143
  %145 = load i32, i32* %144, align 4
  %146 = or i32 %136, %145
  %147 = load i32**, i32*** @key_perm_maskl, align 8
  %148 = getelementptr inbounds i32*, i32** %147, i64 6
  %149 = load i32*, i32** %148, align 8
  %150 = load i32, i32* %9, align 4
  %151 = ashr i32 %150, 9
  %152 = and i32 %151, 127
  %153 = sext i32 %152 to i64
  %154 = getelementptr inbounds i32, i32* %149, i64 %153
  %155 = load i32, i32* %154, align 4
  %156 = or i32 %146, %155
  %157 = load i32**, i32*** @key_perm_maskl, align 8
  %158 = getelementptr inbounds i32*, i32** %157, i64 7
  %159 = load i32*, i32** %158, align 8
  %160 = load i32, i32* %9, align 4
  %161 = ashr i32 %160, 1
  %162 = and i32 %161, 127
  %163 = sext i32 %162 to i64
  %164 = getelementptr inbounds i32, i32* %159, i64 %163
  %165 = load i32, i32* %164, align 4
  %166 = or i32 %156, %165
  store i32 %166, i32* %6, align 4
  %167 = load i32**, i32*** @key_perm_maskr, align 8
  %168 = getelementptr inbounds i32*, i32** %167, i64 0
  %169 = load i32*, i32** %168, align 8
  %170 = load i32, i32* %8, align 4
  %171 = ashr i32 %170, 25
  %172 = sext i32 %171 to i64
  %173 = getelementptr inbounds i32, i32* %169, i64 %172
  %174 = load i32, i32* %173, align 4
  %175 = load i32**, i32*** @key_perm_maskr, align 8
  %176 = getelementptr inbounds i32*, i32** %175, i64 1
  %177 = load i32*, i32** %176, align 8
  %178 = load i32, i32* %8, align 4
  %179 = ashr i32 %178, 17
  %180 = and i32 %179, 127
  %181 = sext i32 %180 to i64
  %182 = getelementptr inbounds i32, i32* %177, i64 %181
  %183 = load i32, i32* %182, align 4
  %184 = or i32 %174, %183
  %185 = load i32**, i32*** @key_perm_maskr, align 8
  %186 = getelementptr inbounds i32*, i32** %185, i64 2
  %187 = load i32*, i32** %186, align 8
  %188 = load i32, i32* %8, align 4
  %189 = ashr i32 %188, 9
  %190 = and i32 %189, 127
  %191 = sext i32 %190 to i64
  %192 = getelementptr inbounds i32, i32* %187, i64 %191
  %193 = load i32, i32* %192, align 4
  %194 = or i32 %184, %193
  %195 = load i32**, i32*** @key_perm_maskr, align 8
  %196 = getelementptr inbounds i32*, i32** %195, i64 3
  %197 = load i32*, i32** %196, align 8
  %198 = load i32, i32* %8, align 4
  %199 = ashr i32 %198, 1
  %200 = and i32 %199, 127
  %201 = sext i32 %200 to i64
  %202 = getelementptr inbounds i32, i32* %197, i64 %201
  %203 = load i32, i32* %202, align 4
  %204 = or i32 %194, %203
  %205 = load i32**, i32*** @key_perm_maskr, align 8
  %206 = getelementptr inbounds i32*, i32** %205, i64 4
  %207 = load i32*, i32** %206, align 8
  %208 = load i32, i32* %9, align 4
  %209 = ashr i32 %208, 25
  %210 = sext i32 %209 to i64
  %211 = getelementptr inbounds i32, i32* %207, i64 %210
  %212 = load i32, i32* %211, align 4
  %213 = or i32 %204, %212
  %214 = load i32**, i32*** @key_perm_maskr, align 8
  %215 = getelementptr inbounds i32*, i32** %214, i64 5
  %216 = load i32*, i32** %215, align 8
  %217 = load i32, i32* %9, align 4
  %218 = ashr i32 %217, 17
  %219 = and i32 %218, 127
  %220 = sext i32 %219 to i64
  %221 = getelementptr inbounds i32, i32* %216, i64 %220
  %222 = load i32, i32* %221, align 4
  %223 = or i32 %213, %222
  %224 = load i32**, i32*** @key_perm_maskr, align 8
  %225 = getelementptr inbounds i32*, i32** %224, i64 6
  %226 = load i32*, i32** %225, align 8
  %227 = load i32, i32* %9, align 4
  %228 = ashr i32 %227, 9
  %229 = and i32 %228, 127
  %230 = sext i32 %229 to i64
  %231 = getelementptr inbounds i32, i32* %226, i64 %230
  %232 = load i32, i32* %231, align 4
  %233 = or i32 %223, %232
  %234 = load i32**, i32*** @key_perm_maskr, align 8
  %235 = getelementptr inbounds i32*, i32** %234, i64 7
  %236 = load i32*, i32** %235, align 8
  %237 = load i32, i32* %9, align 4
  %238 = ashr i32 %237, 1
  %239 = and i32 %238, 127
  %240 = sext i32 %239 to i64
  %241 = getelementptr inbounds i32, i32* %236, i64 %240
  %242 = load i32, i32* %241, align 4
  %243 = or i32 %233, %242
  store i32 %243, i32* %7, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %11, align 4
  br label %244

244:                                              ; preds = %453, %83
  %245 = load i32, i32* %11, align 4
  %246 = icmp slt i32 %245, 16
  br i1 %246, label %247, label %456

247:                                              ; preds = %244
  %248 = load i64*, i64** @key_shifts, align 8
  %249 = load i32, i32* %11, align 4
  %250 = sext i32 %249 to i64
  %251 = getelementptr inbounds i64, i64* %248, i64 %250
  %252 = load i64, i64* %251, align 8
  %253 = load i32, i32* %10, align 4
  %254 = sext i32 %253 to i64
  %255 = add nsw i64 %254, %252
  %256 = trunc i64 %255 to i32
  store i32 %256, i32* %10, align 4
  %257 = load i32, i32* %6, align 4
  %258 = load i32, i32* %10, align 4
  %259 = shl i32 %257, %258
  %260 = load i32, i32* %6, align 4
  %261 = load i32, i32* %10, align 4
  %262 = sub nsw i32 28, %261
  %263 = ashr i32 %260, %262
  %264 = or i32 %259, %263
  store i32 %264, i32* %12, align 4
  %265 = load i32, i32* %7, align 4
  %266 = load i32, i32* %10, align 4
  %267 = shl i32 %265, %266
  %268 = load i32, i32* %7, align 4
  %269 = load i32, i32* %10, align 4
  %270 = sub nsw i32 28, %269
  %271 = ashr i32 %268, %270
  %272 = or i32 %267, %271
  store i32 %272, i32* %13, align 4
  %273 = load i32**, i32*** @comp_maskl, align 8
  %274 = getelementptr inbounds i32*, i32** %273, i64 0
  %275 = load i32*, i32** %274, align 8
  %276 = load i32, i32* %12, align 4
  %277 = ashr i32 %276, 21
  %278 = and i32 %277, 127
  %279 = sext i32 %278 to i64
  %280 = getelementptr inbounds i32, i32* %275, i64 %279
  %281 = load i32, i32* %280, align 4
  %282 = load i32**, i32*** @comp_maskl, align 8
  %283 = getelementptr inbounds i32*, i32** %282, i64 1
  %284 = load i32*, i32** %283, align 8
  %285 = load i32, i32* %12, align 4
  %286 = ashr i32 %285, 14
  %287 = and i32 %286, 127
  %288 = sext i32 %287 to i64
  %289 = getelementptr inbounds i32, i32* %284, i64 %288
  %290 = load i32, i32* %289, align 4
  %291 = or i32 %281, %290
  %292 = load i32**, i32*** @comp_maskl, align 8
  %293 = getelementptr inbounds i32*, i32** %292, i64 2
  %294 = load i32*, i32** %293, align 8
  %295 = load i32, i32* %12, align 4
  %296 = ashr i32 %295, 7
  %297 = and i32 %296, 127
  %298 = sext i32 %297 to i64
  %299 = getelementptr inbounds i32, i32* %294, i64 %298
  %300 = load i32, i32* %299, align 4
  %301 = or i32 %291, %300
  %302 = load i32**, i32*** @comp_maskl, align 8
  %303 = getelementptr inbounds i32*, i32** %302, i64 3
  %304 = load i32*, i32** %303, align 8
  %305 = load i32, i32* %12, align 4
  %306 = and i32 %305, 127
  %307 = sext i32 %306 to i64
  %308 = getelementptr inbounds i32, i32* %304, i64 %307
  %309 = load i32, i32* %308, align 4
  %310 = or i32 %301, %309
  %311 = load i32**, i32*** @comp_maskl, align 8
  %312 = getelementptr inbounds i32*, i32** %311, i64 4
  %313 = load i32*, i32** %312, align 8
  %314 = load i32, i32* %13, align 4
  %315 = ashr i32 %314, 21
  %316 = and i32 %315, 127
  %317 = sext i32 %316 to i64
  %318 = getelementptr inbounds i32, i32* %313, i64 %317
  %319 = load i32, i32* %318, align 4
  %320 = or i32 %310, %319
  %321 = load i32**, i32*** @comp_maskl, align 8
  %322 = getelementptr inbounds i32*, i32** %321, i64 5
  %323 = load i32*, i32** %322, align 8
  %324 = load i32, i32* %13, align 4
  %325 = ashr i32 %324, 14
  %326 = and i32 %325, 127
  %327 = sext i32 %326 to i64
  %328 = getelementptr inbounds i32, i32* %323, i64 %327
  %329 = load i32, i32* %328, align 4
  %330 = or i32 %320, %329
  %331 = load i32**, i32*** @comp_maskl, align 8
  %332 = getelementptr inbounds i32*, i32** %331, i64 6
  %333 = load i32*, i32** %332, align 8
  %334 = load i32, i32* %13, align 4
  %335 = ashr i32 %334, 7
  %336 = and i32 %335, 127
  %337 = sext i32 %336 to i64
  %338 = getelementptr inbounds i32, i32* %333, i64 %337
  %339 = load i32, i32* %338, align 4
  %340 = or i32 %330, %339
  %341 = load i32**, i32*** @comp_maskl, align 8
  %342 = getelementptr inbounds i32*, i32** %341, i64 7
  %343 = load i32*, i32** %342, align 8
  %344 = load i32, i32* %13, align 4
  %345 = and i32 %344, 127
  %346 = sext i32 %345 to i64
  %347 = getelementptr inbounds i32, i32* %343, i64 %346
  %348 = load i32, i32* %347, align 4
  %349 = or i32 %340, %348
  %350 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %351 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %350, i32 0, i32 3
  %352 = load i32*, i32** %351, align 8
  %353 = load i32, i32* %11, align 4
  %354 = sext i32 %353 to i64
  %355 = getelementptr inbounds i32, i32* %352, i64 %354
  store i32 %349, i32* %355, align 4
  %356 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %357 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %356, i32 0, i32 2
  %358 = load i32*, i32** %357, align 8
  %359 = load i32, i32* %11, align 4
  %360 = sub nsw i32 15, %359
  %361 = sext i32 %360 to i64
  %362 = getelementptr inbounds i32, i32* %358, i64 %361
  store i32 %349, i32* %362, align 4
  %363 = load i32**, i32*** @comp_maskr, align 8
  %364 = getelementptr inbounds i32*, i32** %363, i64 0
  %365 = load i32*, i32** %364, align 8
  %366 = load i32, i32* %12, align 4
  %367 = ashr i32 %366, 21
  %368 = and i32 %367, 127
  %369 = sext i32 %368 to i64
  %370 = getelementptr inbounds i32, i32* %365, i64 %369
  %371 = load i32, i32* %370, align 4
  %372 = load i32**, i32*** @comp_maskr, align 8
  %373 = getelementptr inbounds i32*, i32** %372, i64 1
  %374 = load i32*, i32** %373, align 8
  %375 = load i32, i32* %12, align 4
  %376 = ashr i32 %375, 14
  %377 = and i32 %376, 127
  %378 = sext i32 %377 to i64
  %379 = getelementptr inbounds i32, i32* %374, i64 %378
  %380 = load i32, i32* %379, align 4
  %381 = or i32 %371, %380
  %382 = load i32**, i32*** @comp_maskr, align 8
  %383 = getelementptr inbounds i32*, i32** %382, i64 2
  %384 = load i32*, i32** %383, align 8
  %385 = load i32, i32* %12, align 4
  %386 = ashr i32 %385, 7
  %387 = and i32 %386, 127
  %388 = sext i32 %387 to i64
  %389 = getelementptr inbounds i32, i32* %384, i64 %388
  %390 = load i32, i32* %389, align 4
  %391 = or i32 %381, %390
  %392 = load i32**, i32*** @comp_maskr, align 8
  %393 = getelementptr inbounds i32*, i32** %392, i64 3
  %394 = load i32*, i32** %393, align 8
  %395 = load i32, i32* %12, align 4
  %396 = and i32 %395, 127
  %397 = sext i32 %396 to i64
  %398 = getelementptr inbounds i32, i32* %394, i64 %397
  %399 = load i32, i32* %398, align 4
  %400 = or i32 %391, %399
  %401 = load i32**, i32*** @comp_maskr, align 8
  %402 = getelementptr inbounds i32*, i32** %401, i64 4
  %403 = load i32*, i32** %402, align 8
  %404 = load i32, i32* %13, align 4
  %405 = ashr i32 %404, 21
  %406 = and i32 %405, 127
  %407 = sext i32 %406 to i64
  %408 = getelementptr inbounds i32, i32* %403, i64 %407
  %409 = load i32, i32* %408, align 4
  %410 = or i32 %400, %409
  %411 = load i32**, i32*** @comp_maskr, align 8
  %412 = getelementptr inbounds i32*, i32** %411, i64 5
  %413 = load i32*, i32** %412, align 8
  %414 = load i32, i32* %13, align 4
  %415 = ashr i32 %414, 14
  %416 = and i32 %415, 127
  %417 = sext i32 %416 to i64
  %418 = getelementptr inbounds i32, i32* %413, i64 %417
  %419 = load i32, i32* %418, align 4
  %420 = or i32 %410, %419
  %421 = load i32**, i32*** @comp_maskr, align 8
  %422 = getelementptr inbounds i32*, i32** %421, i64 6
  %423 = load i32*, i32** %422, align 8
  %424 = load i32, i32* %13, align 4
  %425 = ashr i32 %424, 7
  %426 = and i32 %425, 127
  %427 = sext i32 %426 to i64
  %428 = getelementptr inbounds i32, i32* %423, i64 %427
  %429 = load i32, i32* %428, align 4
  %430 = or i32 %420, %429
  %431 = load i32**, i32*** @comp_maskr, align 8
  %432 = getelementptr inbounds i32*, i32** %431, i64 7
  %433 = load i32*, i32** %432, align 8
  %434 = load i32, i32* %13, align 4
  %435 = and i32 %434, 127
  %436 = sext i32 %435 to i64
  %437 = getelementptr inbounds i32, i32* %433, i64 %436
  %438 = load i32, i32* %437, align 4
  %439 = or i32 %430, %438
  %440 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %441 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %440, i32 0, i32 5
  %442 = load i32*, i32** %441, align 8
  %443 = load i32, i32* %11, align 4
  %444 = sext i32 %443 to i64
  %445 = getelementptr inbounds i32, i32* %442, i64 %444
  store i32 %439, i32* %445, align 4
  %446 = load %struct.php_crypt_extended_data*, %struct.php_crypt_extended_data** %5, align 8
  %447 = getelementptr inbounds %struct.php_crypt_extended_data, %struct.php_crypt_extended_data* %446, i32 0, i32 4
  %448 = load i32*, i32** %447, align 8
  %449 = load i32, i32* %11, align 4
  %450 = sub nsw i32 15, %449
  %451 = sext i32 %450 to i64
  %452 = getelementptr inbounds i32, i32* %448, i64 %451
  store i32 %439, i32* %452, align 4
  br label %453

453:                                              ; preds = %247
  %454 = load i32, i32* %11, align 4
  %455 = add nsw i32 %454, 1
  store i32 %455, i32* %11, align 4
  br label %244

456:                                              ; preds = %244
  store i32 0, i32* %3, align 4
  br label %457

457:                                              ; preds = %456, %82
  %458 = load i32, i32* %3, align 4
  ret i32 %458
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
